--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,13 @@ jobs:
    - name: install bandit
      run: pip install bandit
    - name: run bandit scan
-     run: bandit -ll -ii -r .
+     run: bandit -ll -ii -r . -f json -o bandit-report.json
+    
+
+   - name: upload artifact
+     uses: actions/upload-artifact@v3
+     if: (always)
+     with: 
+      name: bandit-findings
+      path: bandit-report.json
  
