--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,33 @@ jobs:
      with: 
       name: bandit-findings
       path: bandit-report.json
+
+ image_scan:
+  name: build image and run image scan
+  runs-on: ubuntu-latest
+
+  steps:
+   - name: checkout code
+     uses: actions/checkout@v2
+
+   - name: set up docker
+     uses: docker-practice/actions-setup-docker@v1
+     with: 
+      docker_version: '27.4.1'
+
+   - name: build docker image
+     run: docker build -f Dockerfile -t myapp:latest .
+
+   - name: docker scout scan
+     run: |
+      curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+      sh install-scout.sh
+      docker scout quickview
+      docker scout cves
+      
+    
+      
+  
+    
+   
  
