--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,20 @@ jobs:
    - name: Set up Python
      uses: actions/setup-python@v2
      with: 
-      python-version: 3.8
+       python-version: 3.8
 
    - name: install bandit
      run: pip install bandit
+
    - name: run bandit scan
      run: bandit -ll -ii -r . -f json -o bandit-report.json
-    
 
    - name: upload artifact
      uses: actions/upload-artifact@v4
      if: always()
      with: 
-      name: bandit-findings
-      path: bandit-report.json
+       name: bandit-findings
+       path: bandit-report.json
 
  image_scan:
   name: build image and run image scan
@@ -40,25 +40,24 @@ jobs:
    - name: set up docker
      uses: docker-practice/actions-setup-docker@v1
      with: 
-      docker_version: '27.2.0'
-    
+       docker_version: '27.5.0'
+
+   - name: Debug Docker status
+     run: |
+       sudo systemctl is-active docker || sudo systemctl start docker
+       sudo systemctl status docker
+
    - name: create daemon.json
      run: |
-      echo '{}' | sudo tee /etc/docker/daemon.json  
+       sudo mkdir -p /etc/docker
+       echo '{}' | sudo tee /etc/docker/daemon.json  
 
    - name: build docker image
      run: docker build -f Dockerfile -t myapp:latest .
 
    - name: docker scout scan
      run: |
-      curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-      sh install-scout.sh
-      docker scout quickview
-      docker scout cves
-      
-    
-      
-  
-    
-   
- 
+       curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+       sh install-scout.sh
+       docker scout quickview
+       docker scout cves
