--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,34 +30,39 @@ jobs:
        path: bandit-report.json
 
  image_scan:
-  name: build image and run image scan
+  name: Build image and run image scan
   runs-on: ubuntu-latest
 
   steps:
-   - name: checkout code
-     uses: actions/checkout@v2
+    - name: checkout code
+      uses: actions/checkout@v2
 
-   - name: set up docker
-     uses: docker-practice/actions-setup-docker@v1
-     with: 
-       docker_version: '27.5.0'
+    - name: set up docker
+      uses: docker-practice/actions-setup-docker@v1
+      with: 
+        docker_version: '20.10.30'
 
-   - name: Debug Docker status
-     run: |
-       sudo systemctl is-active docker || sudo systemctl start docker
-       sudo systemctl status docker
+    - name: Debug Docker status
+      run: |
+        sudo systemctl is-active docker || sudo systemctl start docker
+        sudo systemctl status docker
 
-   - name: create daemon.json
-     run: |
-       sudo mkdir -p /etc/docker
-       echo '{}' | sudo tee /etc/docker/daemon.json  
+    - name: create daemon.json
+      run: |
+        sudo mkdir -p /etc/docker
+        echo '{}' | sudo tee /etc/docker/daemon.json
 
-   - name: build docker image
-     run: docker build -f Dockerfile -t myapp:latest .
+    - name: Verify daemon.json exists
+      run: |
+        ls -l /etc/docker/daemon.json
+        cat /etc/docker/daemon.json
 
-   - name: docker scout scan
-     run: |
-       curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-       sh install-scout.sh
-       docker scout quickview
-       docker scout cves
+    - name: build docker image
+      run: docker build -f Dockerfile -t myapp:latest .
+
+    - name: docker scout scan
+      run: |
+        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+        sh install-scout.sh
+        docker scout quickview
+        docker scout cves
