--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,55 +3,54 @@ name: CI
 on: [push]
 
 jobs:
- sast_scan:
-  name: Run Bandit Scan
-  runs-on: ubuntu-22.04
+  sast_scan:
+    name: Run Bandit Scan
+    runs-on: ubuntu-22.04
 
-  steps:
-   - name: checkout code
-     uses: actions/checkout@v2
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
 
-   - name: Set up Python
-     uses: actions/setup-python@v2
-     with: 
-      python-version: 3.8
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with: 
+          python-version: 3.8
 
-   - name: install bandit
-     run: pip install bandit
-   - name: run bandit scan
-     run: bandit -ll -ii -r . -f json -o bandit-report.json
-    
+      - name: install bandit
+        run: pip install bandit
+        
+      - name: run bandit scan
+        run: bandit -ll -ii -r . -f json -o bandit-report.json
 
-   - name: upload artifact
-     uses: actions/upload-artifact@v4
-     if: always()
-     with: 
-      name: bandit-findings
-      path: bandit-report.json
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with: 
+          name: bandit-findings
+          path: bandit-report.json
 
- image_scan:
-  name: build image and run image scan
-  runs-on: ubuntu-22.04
+  image_scan:
+    name: build image and run image scan
+    runs-on: ubuntu-22.04
 
-  steps:
-   - name: checkout code
-     uses: actions/checkout@v2
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
 
-   - name: set up docker
-     uses: docker-practice/actions-setup-docker@v1
-     with: 
-      docker_version: '27.5.0'
+      - name: set up docker
+        uses: docker-practice/actions-setup-docker@v1
+        with: 
+          docker_version: '27.5.0'
 
-   - name: build docker image
-     run: docker build -f Dockerfile -t myapp:latest .
+      - name: build docker image
+        run: docker build -f Dockerfile -t myapp:latest .
 
-   - name: docker scout scan
-     run: |
-      curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-      sh install-scout.sh
+      - name: docker scout scan
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+          sh install-scout.sh
 
-      echo ${{ secrets.REPO_PWD }} || docker login -u ${{ secrets.REPO_USER }} --password-stdin
+          echo "${{ secrets.REPO_PWD }}" | docker login -u "${{ secrets.REPO_USER }}" --password-stdin
 
-      
-      docker scout quickview
-      docker scout cves
+          docker scout quickview
+          docker scout cves
