--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,23 @@ jobs:
       - name: build docker image
         run: docker build -f Dockerfile -t myapp:latest .
 
+     # - name: docker scout scan
+        #run: |
+          #curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+          #sh install-scout.sh
+
+         # echo "${{ secrets.REPO_PWD }}" | docker login -u "${{ secrets.REPO_USER }}" --password-stdin
+
+          #docker scout quickview
+          #docker scout cves
+
+     # This is a second alternative of reusing existing action. Commands from the marketplace
       - name: docker scout scan
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-          sh install-scout.sh
-
-          echo "${{ secrets.REPO_PWD }}" | docker login -u "${{ secrets.REPO_USER }}" --password-stdin
-
-          docker scout quickview
-          docker scout cves
+        uses: docker/scout-action@v1.16.1
+        with:
+         dockerhub-user: ${{ secrets.REPO_USER }}
+         dockerhub-password: ${{ secrets.REPO_PWD }}
+         command: quickview, cves
+         
+       
+      
