--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,13 +55,22 @@ jobs:
           #docker scout quickview
           #docker scout cves
 
-     # This is a second alternative of reusing existing action. Commands from the marketplace
+     # This is a second alternative to reusing existing action. Commands from the marketplace
       - name: docker scout scan
         uses: docker/scout-action@v1.16.1
         with:
          dockerhub-user: ${{ secrets.REPO_USER }}
          dockerhub-password: ${{ secrets.REPO_PWD }}
          command: quickview, cves
+         only-severities: critical, high
+         sarif-file: scout-report.sarif
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with: 
+          name: docker-scout-findings
+          path: scout-report.json  
          
        
       
