--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
          command: quickview, cves
          only-severities: critical, high
          sarif-file: scout-report.sarif
+         exit-code: true
 
       - name: upload artifact
         uses: actions/upload-artifact@v4
